<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_10ssp"
    android:layout_marginRight="@dimen/_10ssp"
    android:layout_marginTop="@dimen/_5sdp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:elevation="@dimen/margin10"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/margin20"
        android:layout_marginBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20ssp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/grey500" />

                <TextView
                    android:id="@+id/tv_server_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="MySql Server"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey500"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_3sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5ssp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:text="@string/port"
                    android:textColor="@color/grey500" />

                <TextView
                    android:id="@+id/tv_port_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="MySql Server"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey500"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_3sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5ssp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:text="@string/instance_name"
                    android:textColor="@color/grey500" />

                <TextView
                    android:id="@+id/tv_instance_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="MySql Server"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey500"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_3sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5ssp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:text="@string/authentication"
                    android:textColor="@color/grey500" />

                <TextView
                    android:id="@+id/tv_authentication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="MySql Server"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey500"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_3sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5ssp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:text="@string/user_name"
                    android:textColor="@color/grey500" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="MySql Server"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey500"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_3sdp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5ssp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:text="@string/last_connection_time"
                    android:textColor="@color/grey500" />

                <TextView
                    android:id="@+id/tv_last_connection_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_10ssp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="MySql Server"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/grey500"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_12sdp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>