<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="@dimen/margin280"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_marginRight="@dimen/margin20"
        android:layout_marginBottom="@dimen/margin10"
        android:elevation="@dimen/margin30"
        app:cardCornerRadius="@dimen/margin20"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/view_color"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin40"
                android:background="@color/cardUp" />

            <TextView
                android:id="@+id/tv_server_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="-30dp"
                android:text="MY SQL Server"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_cpu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/cpu"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
                            android:id="@+id/circular_progress_cpu"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/margin5"
                            android:layout_marginTop="@dimen/margin10"
                            android:layout_marginRight="@dimen/margin5"
                            android:layout_marginBottom="@dimen/margin10"
                            app:enableProgressAnimation="true"
                            app:progressCap="round"
                            app:progressColor="@color/cardUp"
                            app:textColor="@color/cardUp"
                            app:textSize="@dimen/_10ssp"
                            app:direction="clockwise"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/grey500"
                        android:layout_marginRight="@dimen/_3sdp"
                        android:layout_marginLeft="@dimen/_3sdp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/tv_memory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/memory"
                            android:textColor="@color/black"
                            android:textStyle="bold" />


                        <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
                            android:id="@+id/circular_progress_memory"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/margin5"
                            android:layout_marginTop="@dimen/margin10"
                            android:layout_marginRight="@dimen/margin5"
                            android:layout_marginBottom="@dimen/margin10"
                            app:enableProgressAnimation="true"
                            app:progressCap="round"
                            app:progressColor="@color/cardUp"
                            app:textColor="@color/cardUp"
                            app:direction="clockwise"
                            app:textSize="@dimen/_10ssp"/>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@color/grey500" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/_5sdp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disk"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="@color/grey500"
                        android:layout_marginRight="@dimen/margin15"
                        android:layout_marginTop="@dimen/_5sdp"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rv_disk"
                        android:layout_marginTop="@dimen/_10sdp"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>